nalgebra-macros/tests/trybuild/stack_empty.rs
use nalgebra_macros::stack;

fn main() {
    stack![];
}
